--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <section> 
             <p>
-				<a href="lesson15/index.html">Lesson 15</a>
+				<a href="lesson15/exam/index.html">Lesson 15</a>
 			</p>
         </section>
    </body>
