--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <section> 
             <p>
 				<a href="lesson15/exam/index.html">Lesson 15</a>
+		    
+		    <a href="lesson16/index.html">Lesson 16</a>
+		    <a href="lesson17/index.html">Lesson 17</a>
 			</p>
         </section>
    </body>
